2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	Resolves half of NB#127320 - desktop panning
	* matchbox/core/mb-wm-client-window.c: Remove the 'Monster Hack'. The
	original reason for this (browser visibility) appears to have gone 
	away, and this caused the desktop to be 799x479 (instead of 800x480)
	which meant that dragging right from the right-hand side of the
	screen failed to produce a mouse_pressed event on the desktop.

	* matchbox/core/mb-wm-types.h
        * matchbox/core/mb-wm-atoms.c
	* matchbox/core/mb-wm-client.c: For RGBA sapwood - look for 
	MAEMO_IGNORE_ALPHA window property, and only ignore alpha if so.
	Reverts previous change in order to handle alpha in a more compatible
	way.

2009-07-22  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes to help with RGBA sapwood - disable alpha (transparency) 
	channel for apps and dialogs.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Use set_allow_alpha
	  to disable alpha if libmatchbox doesn't believe the window has
	  alpha. 
	* matchbox/core/mb-wm-client.c: Intentionally don't allow transparency
	  for apps or dialogs.
	* debian/control: make dependent on the new clutter

2009-07-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.49

	Applied patch from Laszlo Pere for NB#123486.

	* matchbox/theme-engines/mb-wm-theme.[ch]: New functions
	mb_wm_theme_protect, mb_wm_theme_unprotect, mb_wm_theme_check_broken,
	mb_wm_theme_is_broken.
	* matchbox/core/mb-window-manager.c: Fallback to the default theme if
	we detected brokenness in the current theme.

2009-07-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-main-context.c
	(mb_wm_main_context_x_event_handler_remove): memset the list item with
	zeros before freeing it so that call_handlers_for_event can see that
	it's not valid anymore.

2009-07-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.48

	Revert Thomas' patch for NB#115408, we cannot have process-based